[package]
name = "tx-executor"
version = "0.1.0"
edition = "2021"
resolver = "2"


[dependencies]
alloy = { version = "0.7.0", features = ["full"] }
alloy-primitives = "0.8"
alloy-rpc-types = "0.7.0"
alloy-sol-types = "0.8.6"
alloy-consensus = "0.7.0"
alloy-provider = "0.7.0"
alloy-chains = "0.1.27"
foundry-config = "0.2.0"
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
lazy_static = "1.4.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.37"
async-recursion = "1.0.5"
eyre = "0.6.10"
dotenv = "0.15.0"
once_cell = "1.19.0"
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing-subscriber = "0.3.16"
reqwest = "0.12.9"
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
incremental = true
